[package]
name = "async-duckdb"
version = "0.0.3"
edition = "2021"
description = "A library for working with duckdb asynchronously"
keywords = ["duckdb", "async", "tokio"]
categories = ["database"]

[features]
default = ["bundled"]
bundled = ["duckdb/bundled"]
json = ["duckdb/json"]
parquet = ["duckdb/parquet"]
vtab = ["duckdb/vtab"]
vtab-loadable = ["duckdb/vtab-loadable"]
vtab-excel = ["duckdb/vtab-excel"]
vtab-arrow = ["duckdb/vtab-arrow"]
appender-arrow = ["duckdb/appender-arrow"]
vtab-full = ["duckdb/vtab-full"]
extensions-full = ["duckdb/extensions-full"]
buildtime_bindgen = ["duckdb/buildtime_bindgen"]
modern-full = ["duckdb/modern-full"]
polars = ["duckdb/polars"]
chrono = ["duckdb/chrono"]
serde_json = ["duckdb/serde_json"]
uuid = ["duckdb/uuid"]

[dependencies]
crossbeam-channel = { version = "0.5.9" }
duckdb = { version = "1.1.1" }
futures-channel = { version = "0.3.29" }
futures-util = { version = "0.3.29" }

[dev-dependencies]
async-std = { version = "1.12.0" }
paste = { version = "1.0.12" }
tempfile = { version = "3.6.0" }
tokio = { version = "1.29.1", features = ["rt"] }
